Tue Sep  8 21:48:15 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm.c (rb_thread_mark): mark callers iseqs.  [ruby-core:25474]
	  [Bug #2062]

Tue Sep  8 11:53:58 2009  Koichi Sasada  <ko1@atdot.net>

	* iseq.c (iseq_mark): no need to mark inline cache entries.

	* insns.def (onceinlinecache, setinlinecache): save a value
	  to mark cached value.

Tue Sep  8 08:32:30 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/dl/test_{cfunc,ptr}.rb: added tests from Aaron Patterson.
	  see [ruby-dev:39249].

Mon Sep  7 17:22:59 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (rb_io_tell): adjustment for ungotten data.

Mon Sep  7 17:13:53 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (io_encname_bom_p): removed magic number.

Mon Sep  7 12:26:04 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/irb/inspector.rb (IRB::INSPECTORS.def_inspector): support
	  object without #inspect defined.  a patch from Daniel
	  Bovensiepen.  [ruby-core:25200]

Mon Sep  7 05:38:34 2009  Koichi Sasada  <ko1@atdot.net>

	* insns.def (opt_*): add IC operands.

	* vm_insnhelper.h (CALL_SIMPLE_METHOD): add a version which
	  use an inline cache.  USE_IC_FOR_SPECIALIZED_METHOD macro
	  switchs the behaviour.  This change also removes
	  CALL_SIMPLE_METHOD_IC() macro.

	* tool/instruction.rb: fix elimination process to ignore
	  variable "ic".

Mon Sep  7 05:21:09 2009  Koichi Sasada  <ko1@atdot.net>

	* Makefile.in, common.mk: move a id.h generation rule.

Mon Sep  7 05:07:59 2009  Koichi Sasada  <ko1@atdot.net>

	* benchmark/driver.rb: remove RUBY_VERSION output.

Mon Sep  7 05:06:16 2009  Koichi Sasada  <ko1@atdot.net>

	* vm_insnhelper.c: rename macro name ENABLE_IC_FOR_IVAR
	  to USE_IC_FOR_IVAR.

Mon Sep  7 03:21:40 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/uri/common.rb (URI.escape): obsoleted.

	* lib/uri/common.rb (URI,unescape): ditto.

Sun Sep  6 18:13:54 2009  Koichi Sasada  <ko1@atdot.net>

	* vm_insnhelper.h (CALL_SIMPLE_METHOD_IC): make a macro